# npext

./: README.md  numpy_ext.ipynb  pyproject.toml
src/npext/: npext.py
