[project]
name = "npext"
version = "0.1.0"
description = "numpy extension"
authors = [
    { name = "Chou Hung-Yi", email = "hychou.svm@gmail.com" }
]
dependencies = [
    "numpy>=1.26.4",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.24.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["npext"]
